cursor介入之前