@@ -2,8 +2,10 @@ package org.csits.kel.server.service;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.csits.kel.server.constants.JobType;
 import org.springframework.util.FileCopyUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -44,14 +46,22 @@ public class JobConfigService {
     }
 
     /**
-     * 合并配置。configKey 为完整 key（如 demo_extract、bss_kingbase_extract），或 jobCode + 类型由 type 拼出。
-     * @param jobCode 作业编码，如 demo 或 bss_kingbase_extract
-     * @param type 若 jobCode 不含 _extract/_load 则用此拼 configKey：jobCode + "_" + type（extract/load）
+     * 合并配置。jobName 即配置唯一标识（DB config_key = YAML 内 job.name），传 job.name 即可加载。
      */
-    public MergedResult loadMergedConfig(String jobCode, String type) throws IOException {
-        String configKey = resolveConfigKey(jobCode, type);
+    public MergedResult loadMergedConfig(String jobName) throws IOException {
+        if (jobName == null || jobName.isBlank()) {
+            throw new IllegalArgumentException("jobName 不能为空");
+        }
+        String key = jobName.trim();
         GlobalConfig global = loadGlobalConfig();
-        JobConfig job = loadJobConfig(configKey);
+        JobConfig job = loadJobConfig(key);
+        String globalDbVersion = global.getExtract() != null ? global.getExtract().getDatabaseVersion() : null;
+        if (job.getExtractDatabase() != null && isBlank(job.getExtractDatabase().getDatabaseVersion()) && globalDbVersion != null) {
+            job.getExtractDatabase().setDatabaseVersion(globalDbVersion);
+        }
+        if (job.getTargetDatabase() != null && isBlank(job.getTargetDatabase().getDatabaseVersion()) && globalDbVersion != null) {
+            job.getTargetDatabase().setDatabaseVersion(globalDbVersion);
+        }
         GlobalConfig mergedGlobal = new GlobalConfig();
         BeanUtils.copyProperties(global, mergedGlobal);
         if (job.getRuntime() != null && job.getRuntime().getTableConcurrency() != null) {
@@ -65,18 +75,46 @@ public class JobConfigService {
         return new MergedResult(mergedGlobal, job);
     }
 
-    /** 兼容旧调用：按 extract 尝试，再按 jobCode 原样。 */
-    public MergedResult loadMergedConfig(String jobCode) throws IOException {
-        if (jobCode != null && (jobCode.endsWith("_extract") || jobCode.endsWith("_load"))) {
-            return loadMergedConfig(jobCode, null);
-        }
-        return loadMergedConfig(jobCode, "extract");
+    private static boolean isBlank(String s) {
+        return s == null || s.isBlank();
     }
 
     public List<String> listJobConfigKeys() {
         return jobConfigRepository.findAll().stream()
             .map(JobConfigEntity::getConfigKey)
             .collect(Collectors.toList());
+    }
+
+    /**
+     * 表级卸载用：仅返回 job.type 为 EXTRACT_KINGBASE 的配置 key（不含 file_extract）。
+     */
+    public List<String> listConfigKeysForTableExport() {
+        return filterConfigKeysByJobType(JobType.EXTRACT_KINGBASE);
+    }
+
+    /**
+     * 表级加载用：仅返回 job.type 为 KINGBASE_LOAD 的配置 key（不含 file_load）。
+     */
+    public List<String> listConfigKeysForTableLoad() {
+        return filterConfigKeysByJobType(JobType.KINGBASE_LOAD);
+    }
+
+    private List<String> filterConfigKeysByJobType(JobType expectedType) {
+        List<String> all = listJobConfigKeys().stream()
+            .filter(k -> k != null && !"__global__".equals(k))
+            .collect(Collectors.toList());
+        List<String> result = new ArrayList<>();
+        for (String key : all) {
+            try {
+                JobConfig config = loadJobConfig(key);
+                if (config.getJob() != null && expectedType == config.getJob().getType()) {
+                    result.add(key);
+                }
+            } catch (Exception e) {
+                log.debug("跳过配置 key={}: {}", key, e.getMessage());
+            }
+        }
+        return result;
     }
 
     /** 作业配置列表，用于作业配置页。 */
@@ -94,22 +132,56 @@ public class JobConfigService {
     }
 
     /**
-     * 保存作业配置（创建或更新）。保存前校验 YAML 格式。
+     * 保存作业配置（创建或更新）。存储 key 使用 YAML 内 job.name，保证 config_key 与 job.name 一致。
+     * @param currentKey 当前 key（更新时传入，用于定位要更新的行）；新增时传 null，key 从 YAML 解析
+     * @param contentYaml 配置 YAML
      */
-    public void saveJobConfig(String configKey, String contentYaml) throws IOException {
-        if (configKey == null || configKey.trim().isEmpty()) {
-            throw new IllegalArgumentException("configKey 不能为空");
+    public void saveJobConfig(String currentKey, String contentYaml) throws IOException {
+        if (contentYaml == null || contentYaml.isBlank()) {
+            throw new IllegalArgumentException("contentYaml 不能为空");
         }
-        configKey = configKey.trim();
-        if ("__global__".equals(configKey)) {
+        if (currentKey != null && "__global__".equals(currentKey.trim())) {
             yamlConfigLoader.loadGlobalConfigFromString(contentYaml);
-        } else {
-            yamlConfigLoader.loadJobConfigFromString(contentYaml);
+            JobConfigEntity e = new JobConfigEntity();
+            e.setConfigKey("__global__");
+            e.setContentYaml(contentYaml);
+            jobConfigRepository.save(e);
+            return;
         }
+        JobConfig parsed = yamlConfigLoader.loadJobConfigFromString(contentYaml);
+        if (parsed.getJob() == null || parsed.getJob().getName() == null || parsed.getJob().getName().isBlank()) {
+            throw new IllegalArgumentException("YAML 内 job.name 不能为空，且作为配置唯一标识");
+        }
+        String jobName = parsed.getJob().getName().trim();
+        if (currentKey == null || currentKey.isBlank()) {
+            if (jobConfigRepository.existsByConfigKey(jobName)) {
+                throw new IllegalArgumentException("job.name 已存在，不能重名: " + jobName);
+            }
+            JobConfigEntity e = new JobConfigEntity();
+            e.setConfigKey(jobName);
+            e.setContentYaml(contentYaml);
+            jobConfigRepository.save(e);
+            log.info("新增作业配置: {}", jobName);
+            return;
+        }
+        String existingKey = currentKey.trim();
+        if (jobName.equals(existingKey)) {
+            JobConfigEntity e = new JobConfigEntity();
+            e.setConfigKey(existingKey);
+            e.setContentYaml(contentYaml);
+            jobConfigRepository.save(e);
+            log.debug("更新作业配置: {}", existingKey);
+            return;
+        }
+        if (jobConfigRepository.existsByConfigKey(jobName)) {
+            throw new IllegalArgumentException("job.name 已存在，不能重名: " + jobName);
+        }
+        jobConfigRepository.deleteByConfigKey(existingKey);
         JobConfigEntity e = new JobConfigEntity();
-        e.setConfigKey(configKey);
+        e.setConfigKey(jobName);
         e.setContentYaml(contentYaml);
         jobConfigRepository.save(e);
+        log.info("作业配置已重命名: {} -> {}", existingKey, jobName);
     }
 
     /** 删除作业配置。禁止删除 __global__。 */
@@ -118,6 +190,35 @@ public class JobConfigService {
             throw new IllegalArgumentException("不能删除全局配置 __global__");
         }
         jobConfigRepository.deleteByConfigKey(configKey);
+    }
+
+    /**
+     * 存量迁移：使 YAML 内 job.name 与 config_key 一致。
+     * 对每条作业配置（不含 __global__），若 job.name 为空或与 config_key 不同，则把 job.name 设为 config_key 并回写 YAML。
+     */
+    public int migrateJobNameToConfigKey() throws IOException {
+        List<JobConfigEntity> all = jobConfigRepository.findAll();
+        int updated = 0;
+        for (JobConfigEntity entity : all) {
+            String key = entity.getConfigKey();
+            if (key == null || "__global__".equals(key)) {
+                continue;
+            }
+            JobConfig config = yamlConfigLoader.loadJobConfigFromString(entity.getContentYaml());
+            if (config.getJob() == null) {
+                config.setJob(new JobConfig.JobBasic());
+            }
+            String currentName = config.getJob().getName();
+            if (currentName == null || currentName.isBlank() || !currentName.trim().equals(key)) {
+                config.getJob().setName(key);
+                String newYaml = yamlConfigLoader.writeJobConfigToString(config);
+                entity.setContentYaml(newYaml);
+                jobConfigRepository.save(entity);
+                updated++;
+                log.info("迁移 job.name 与 config_key 一致: config_key={}, 原 job.name={}", key, currentName);
+            }
+        }
+        return updated;
     }
 
     /** 从 classpath YAML 资源导入到 DB（用于首次初始化或批量导入）。 */
@@ -163,16 +264,6 @@ public class JobConfigService {
         public JobConfig getJobConfig() {
             return jobConfig;
         }
-    }
-
-    private static String resolveConfigKey(String jobCode, String type) {
-        if (jobCode == null) {
-            return "";
-        }
-        if (type == null || type.isEmpty() || jobCode.endsWith("_extract") || jobCode.endsWith("_load")) {
-            return jobCode;
-        }
-        return jobCode + "_" + type;
     }
 
     private GlobalConfig loadGlobalConfigFromDb() throws IOException {
